--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: java
 jdk:
   - oraclejdk8
+install: true # skipping default install step
 script: 
     - mvn test -Dlicense_key=$LICENSE_KEY
 env:
