--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
             <plugin>
                 <groupId>com.restlet.client</groupId>
                 <artifactId>maven-plugin</artifactId>
-                <version>2.2.2</version>
                 <executions>
                     <execution>
                         <phase>test</phase>
@@ -16,7 +15,7 @@
                             <goal>test</goal>
                         </goals>
                         <configuration>
-                          <file>data_validation.json</file>
+                          <file>swapi-tests.json</file>
                           <licenseKey>${license_key}</licenseKey>
                         </configuration>
                     </execution>
